--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fractal Threads of Consciousness — Sergey Kaminov</title>
-    <meta name="description" content="A philosophical exploration of consciousness, coherence, and the divine recursion that weaves reality itself. Written by Sergey Kaminov.">
-    <meta property="og:title" content="Fractal Threads of Consciousness — A Modern Philosophy of the Living Field">
-    <meta property="og:description" content="The field learns through us. Fractal Manifesto 1.0 by Sergey Kaminov.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.png">
-    <meta name="theme-color" content="#111111" />
+    <meta name="description" content="A philosophical exploration of consciousness, coherence, and the divine recursion that weaves reality itself.">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
